update compose file

--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -16,8 +16,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -q \
 RUN rm -r /var/lib/apt/lists/*
 
 ADD https://www.urbackup.org/downloads/Server/${VERSION}/debian/stable/urbackup-server_${VERSION}_amd64.deb /root/urbackup-server_amd64.deb
-RUN dpkg -i /root/urbackup-server_amd64.deb
-RUN apt install -f
+RUN echo /var/urbackup | dpkg -i /root/urbackup-server_amd64.deb
+
+#RUN apt install -f
 
 EXPOSE 55413
 EXPOSE 55414
